examples/errors/parsing/sort-ptr-missing.cn
fun f : Ptr -> Int [pure] = {
  p -> 0
}

main : () [impure] = ()
